src/test/deca/context/valid/104_classe1FieldAssign.deca
// Description:
//    Programme minimaliste: une classe pas très utile avec un seul champ initialisé.
//
// Historique:
//    cree le 01/01/2022

class A {
	float i = 1;
}
