src/test/deca/context/invalid/tests/not.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 13: ContextualError: NotBooleanType
// 
// Historique:
//    cree le 01/01/2022

{

   // Doit etre refuse.
   float a = !1;
}
